--- a/brunson-proxy/Caddyfile
+++ b/brunson-proxy/Caddyfile
@@ -1,11 +1,42 @@
+{
+  auto_https disable_redirects
+}
+
+http://brunson.me {
+  redir https://brunson.me{uri} 301
+}
+http://www.brunson.me {
+  redir https://brunson.me{uri} 301
+}
+www.brunson.me {
+  redir https://brunson.me{uri} 301
+}
 brunson.me {
-  reverse_proxy localhost:3000
+  reverse_proxy brunson-app:3000
 }
 
+http://brunson.dev {
+  redir https://brunson.dev{uri} 301
+}
+http://www.brunson.dev {
+  redir https://brunson.dev{uri} 301
+}
+www.brunson.dev {
+  redir https://brunson.dev{uri} 301
+}
 brunson.dev {
-  reverse_proxy localhost:3000
+  reverse_proxy brunson-app:3000
 }
 
+http://brunson.photos {
+  redir https://brunson.photos{uri} 301
+}
+http://www.brunson.photos {
+  redir https://brunson.photos{uri} 301
+}
+www.brunson.photos {
+  redir https://brunson.photos{uri} 301
+}
 brunson.photos {
-  reverse_proxy localhost:3000
+  reverse_proxy brunson-app:3000
 }
