--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   brunson-proxy:
     build: ./brunson-proxy/
-    restart: unless-stopped
+    restart: always
     ports:
       - "80:80"
       - "443:443"
@@ -12,11 +12,7 @@ services:
       - caddy_config:/config
   brunson-app:
     build: ./brunson-app/
-    restart: unless-stopped
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./brunson-app:/app
+    restart: always
     environment:
       NODE_ENV: production
 volumes:
