--- a/brunson-app/package.json
+++ b/brunson-app/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "debug": "~2.6.9",
@@ -14,6 +15,12 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "@testing-library/dom": "^8.1.0",
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.9",
+    "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
