--- a/brunson-app/package.json
+++ b/brunson-app/package.json
@@ -16,11 +16,13 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.9",
     "supertest": "^6.1.3"
   },
   "jest": {
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["<rootDir>/tests/jest-setup.js"]
   }
 }
